tests/fixtures/valid/run_file_io.lby
fn main -> string
    write_file("target/lullaby_fixture_io.txt", "alpha")
    append_file("target/lullaby_fixture_io.txt", " beta")
    read_file("target/lullaby_fixture_io.txt")
