tests/fixtures/invalid/read_missing_file.lby
fn main -> string
    read_file("target/lullaby_missing_file.txt")
